...
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>
    <string name="menu_page_citation">Cite this page</string>
    <string name="menu_page_generate_qr_code">Generate QR code</string>
    <string name="menu_page_share_nfc">Share via NFC</string>


    <!-- Long press menu -->
    <string name="menu_long_press_open_page">Open</string>
...

    <!-- Added for the new text-to-speech button -->
    <string name="menu_show_text_to_speech">Text-To-Speech</string>

    <!-- Citation page -->
    <string name="citation_first_title">Choose your citation style:</string>
    <string name="citation_apa">APA</string>
    <string name="citation_mla">MLA</string>
    <string name="citation_ieee">IEEE</string>
    <string name="citation_latex">LATEX</string>
    <string name="citation_second_title">Here is your citation!</string>
    <string name="citation_box_text">We are currently generating your citation!\nPlease wait a few seconds....</string>
    <string name="citation_copy_citation">Copy citation</string>

    <!-- NFC page -->
    <string name="nfc_title">Hold your device near another device.</string>
    <string name="nfc_description">Hold your device near another device.</string>
    <string name="nfc_broadcast">Share article</string>
    <string name="nfc_receive">Receive article</string>
...
    <string name="view_main_page_card_action">View main page</string>
    <string name="view_featured_image_card_title">Picture of the day</string>
    <string name="view_featured_image_card_download">Download</string>
    <string name="menu_feed_card_dismiss">Hide this card</string>
    <string name="menu_feed_card_dismissed">Card hidden.</string>
    <string name="menu_feed_card_edit_card_languages">Edit card languages</string>
    <string name="menu_feed_overflow_label">More options</string>

    <string name="feed_featured_image_share_subject">Featured image from Wikimedia Commons</string>
    <string name="feed">Explore</string>
    <string name="most_read_list_card_title">Trending</string>
    <string name="view_static_card_icon_content_description">Card icon</string>
    <string name="view_card_news_title">In the news</string>
...
